# garm-proxmox-provider

./: .gitignore  .markdownlint.json  .versionrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
config/: garm-config.toml
docs/: api.md  architecture.md  cli.md  conf.py  configuration.md  index.md  logging.md  myst.yml  setup.md  testing_templates.md
src/garm_proxmox_provider/: __init__.py  cli.py  client.py  cloud_init.py  commands.py  config.py  models.py  setup.py
templates/: gitea_linux_userdata.sh  gitea_windows_userdata.ps1
tests/: test_client_lxc.py  test_cloud_init.py  test_commands.py  test_config.py  test_e2e_local.py  test_models.py
