[project]
name = "garm-proxmox-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nikolai-in", email = "nikolai-in@tuta.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "openssh-wrapper>=0.4",
    "paramiko>=4.0.0",
    "proxmoxer>=2.3.0",
    "requests>=2.33.1",
    "requests-toolbelt>=1.0.0",
]

[project.scripts]
garm-proxmox-provider = "garm_proxmox_provider:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
